--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -15,7 +15,6 @@
     sorting=ynt
 ]{biblatex}
 \addbibresource{refs.bib}
-\nocite{*}
 
 %opening
 \title{GPS Spoofing and the importance of correct time}
@@ -26,13 +25,22 @@
 \maketitle
 
 \begin{abstract}
-Currently, this is not much more but comments and notes in order for me to write an essay, an essay ment for me to prepare for my work with my master thesis. This document does not represent the quality of the finished product in any way. This is a cite \cite{KandR}
+Currently, this is not much more but comments and notes in order for me to write an essay, an essay meant for me to prepare for my work with my master thesis. This document does not represent the quality of the finished product in any way. This is a cite \cite{KandR}
 \end{abstract}
 
-\section{Comments and notes}
+\section{Essay: Notes and Comments}
+Notes and comments directly related to the essay.
 
+\subsection{PMUs}
+
+
+\section{Master Thesis: Notes and Comments}
+General notes and comments related to the master thesis. Overlap may occur.
+
+\subsection{RasPI Display}
+Just use an Arduino to control whatever output you need. You are gonna need the serial on the Raspberry to talk with Cesium clock anyway. 
 \newpage
- 
+
 \printbibliography[title={Complete Bibliography}]
 
 \end{document}
