--- a/refs.bib
+++ b/refs.bib
@@ -5,3 +5,16 @@
    PUBLISHER = "Prentice-Hall, Inc.",
    YEAR = 1988
   }
+  
+  @article{HengChouGao14,
+    author    = "Liang Heng, Daniel Chou, Grace Xingxin Gao",
+    title     = "Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver Architecture",
+    journal   = "InsideGNSS",
+    %volume   = "",
+    %number   = "",
+    pages    = "12",
+    year      = "2014",
+    month    = "November/December",
+    %note     = "",
+}
+  
