--- a/refs.bib
+++ b/refs.bib
@@ -1,5 +1,4 @@
-@BOOK
-  {KandR,
+@BOOK {KandR,
    AUTHOR  = "Kernighan, Brian W. and Ritchie, Dennis M.",
    TITLE   = "{The C Programming Language Second Edition}",
    PUBLISHER = "Prentice-Hall, Inc.",
@@ -15,6 +14,29 @@
     pages    = "12",
     year      = "2014",
     month    = "November/December",
-    %note     = "",
+    %note     = ""
 }
+
+@misc{GPSGOV,
+  author = "National Coordination Office for Space-Based Positioning, Navigation, and Timing",
+  title = {Space Segment},
+  howpublished = {\url{http://www.gps.gov/systems/gps/space/}},
+  note = {Accessed: 16-04-2015}
+}
+
+@misc{NATINT,
+  author = "National Instruments",
+  title = {GPS Receiver Testing},
+  howpublished = {\url{http://www.insidegnss.com/special/elib/National_Instruments_GPS_Rx_Testing_tutorial.pdf}},
+  note = {Accessed: 16-04-2015}
+}
+
+@misc{GISTRILATERATE,
+  author = "GIS Commons",
+  howpublished = {\url{http://giscommons.org/files/2010/01/2.141.gif}},
+  url = {http://giscommons.org/chapter-2-input/},
+  note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
+}
+
+
   
