--- a/refs.bib
+++ b/refs.bib
@@ -45,6 +45,13 @@
   note = {Accessed: 16-04-2015}
 }
 
+@BOOK {SteJ,
+  author = "Steven Johnson",
+  title = "Where good ideas come from, the natural history of innovation",
+  publisher = "New York: Riverhead Books",
+  year = 2010 
+}
+
 
 
 
