--- a/refs.bib
+++ b/refs.bib
@@ -17,11 +17,18 @@
     %note     = ""
 }
 
-@misc{GPSGOV,
+@misc{GPSGOVSS,
   author = "National Coordination Office for Space-Based Positioning, Navigation, and Timing",
   title = {Space Segment},
   howpublished = {\url{http://www.gps.gov/systems/gps/space/}},
   note = {Accessed: 16-04-2015}
+}
+
+@misc{GPSGOVTE,
+  author = "National Coordination Office for Space-Based Positioning, Navigation, and Timing",
+  title = {Trilateration Exercise},
+  howpublished = {\url{http://www.gps.gov/multimedia/tutorials/trilateration/}},
+  note = {Accessed: 21-04-2015}
 }
 
 @misc{NATINT,
@@ -50,7 +57,7 @@
   title = "Where good ideas come from, the natural history of innovation",
   publisher = "New York: Riverhead Books",
   year = 2010 
-}
+} 
 
 
 
