--- a/refs.bib
+++ b/refs.bib
@@ -59,7 +59,16 @@
   year = 2010 
 } 
 
-
+  @article{YLJRNR,
+    author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui, Reynaldo Francisco Nuqui",
+    title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
+    %volume   = "",
+    %number   = "",
+    pages    = "220",
+    year      = "2001",
+    month    = "July",
+    %note     = ""
+}
 
 
   
