Added an article to the bibliography about wristwatches

--- a/refs.bib
+++ b/refs.bib
@@ -31,6 +31,15 @@
   note = {Accessed: 21-04-2015}
 }
 
+@article{CSMG,
+  author = "Carlene Stephens and Maggie Dennis",
+  title = "Engineering time: inventing the electronic wristwatch",
+  journal = "British Journal for the History of Science",
+  year = 2000,
+  volume = 33,
+  pages = "477-497"
+}
+
 @misc{NATINT,
   author = "National Instruments",
   title = {GPS Receiver Testing},
@@ -59,16 +68,17 @@
   year = 2010 
 } 
 
-  @article{YLJRNR,
-    author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui, Reynaldo Francisco Nuqui",
-    title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
-    %volume   = "",
-    %number   = "",
-    pages    = "220",
-    year      = "2001",
-    month    = "July",
-    %note     = ""
+@article{YLJRNR,
+  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui, Reynaldo Francisco Nuqui",
+  title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
+  %volume   = "",
+  %number   = "",
+  year      = "2001",
+  month    = "July",
+  %note     = ""
 }
+
+
 
 
   
