--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -81,9 +81,8 @@ Trilateration is used in geometry as a process of determining the location (abso
 The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. The signal contains a time stamp of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. \cite{GPSGOVTE}  
 
 \section{Clocks}
-What does a \$10 wristwatch and a \$100000 atomic clock have in common? They both drift. This phenomena known as \texttt{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. Of course in our scenario with the wristwatch and the atomic clock, the wristwatch will drift faster. 
-
-\subsection{Atomic clocks}
+What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they "obtain" their time. A typical \$10 wristwatch uses a quartz-movement to keep the time.   Of course in our scenario with the wristwatch and the atomic clock, the similarities stop here. An atomic clock is a completely different beast from a wristwatch. 
+\cite{CSMG}
 
 \subsection{GPS Time}
 During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. 
