Soon finished with clock

--- a/refs.bib
+++ b/refs.bib
@@ -37,7 +37,8 @@
   journal = "British Journal for the History of Science",
   year = 2000,
   volume = 33,
-  pages = "477-497"
+  pages = "477-497",
+  url = {\url{http://www.ieee-uffc.org/main/history/step.pdf}}
 }
 
 @misc{NATINT,
@@ -78,6 +79,12 @@
   %note     = ""
 }
 
+@misc{HP,
+  author = "Carl R. (Rod) Nave",
+  title = {HyperPhysics},
+  howpublished = {\url{http://hyperphysics.phy-astr.gsu.edu/hbase/acloc.html}},
+  note = {Accessed: 16-04-2015}
+}
 
 
 
