--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -55,7 +55,7 @@
 \setcounter{page}{0}
 
 \begin{abstract}
-Currently, this is not much more but comments and notes in order for me to write an essay, an essay meant for me to prepare for my work with my master thesis. This document does not represent the quality of the finished product in any way. Example cite \cite{KandR}
+Currently, this is not much more but comments and notes in order for me to write an essay, an essay meant for me to prepare for my work with my master thesis. This document does not represent the quality of the finished product in any way.
 \end{abstract}
 
 \newpage
@@ -81,27 +81,17 @@ Trilateration is used in geometry as a process of determining the location (abso
 The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. The signal contains a time stamp of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. \cite{GPSGOVTE}  
 
 \section{Clocks}
-What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they "obtain" their time. A typical \$10 wristwatch uses a quartz-movement to keep the time.   Of course in our scenario with the wristwatch and the atomic clock, the similarities stop here. An atomic clock is a completely different beast from a wristwatch. 
-\cite{CSMG}
+What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they "obtain" their time. In essence, all clocks work the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the count mechanism the clockwork and the clock face and dials, the display. In a typical wristwatch, the oscillator is quartz crystal powered by a battery. The frequency of which the crystal oscillations is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. Although a completely different beast, the same principles apply to the atomic clock. \cite{HP}
 
 \subsection{GPS Time}
 During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. 
 
-
 \section{Phasor Measurement Units}
 An example of such an application is a phasor measurement unit (PMU).A PMU analyzes the waves on the electrical grid and uses a common time source for synchronization. This synchronization allows for real-time measurements between multiple points in the grid by multiple PMU's. The common time source (and why PMU's are relevant) is obtained by using GPS. \cite{YLJRNR}
 
-\section{Signal interference}
-\subsection{Locking on}
-\subsection{Jamming}
-\subsection{Spoofing}
-
+\section{Spoofing}
 By emitting a high-power signal at the GPS frequency, one can interfere with the signals emitted by the GPS satellites, effectively denying GPS receivers use of these signals. These signals are already weak considering their travel from space. Such an "attack", although effective, is pretty naive and easily recognized by the jammed party. After all, if you don't have a signal, you are probably being jammed. A more sophisticated approach is to emit a counterfeit signal in order to manipulate the receivers reported time or even position. IRAN, DRONE SPOOF STORY!. 
 
-
-\subsection{Detection}
-\subsection{Prevention}
-\subsubsection{Encryption}
 
 \newpage
 \printbibliography[title={Complete Bibliography},heading=bibintoc]
