Updated clock and added a picture

--- a/refs.bib
+++ b/refs.bib
@@ -5,7 +5,7 @@
    YEAR = 1988
   }
   
-  @article{HengChouGao14,
+@article{HengChouGao14,
     author    = "Liang Heng, Daniel Chou, Grace Xingxin Gao",
     title     = "Reliable GPS-Based Timing for Power Systems: A Multi-Layered, Multi Receiver Architecture",
     journal   = "InsideGNSS",
@@ -84,6 +84,13 @@
   title = {HyperPhysics},
   howpublished = {\url{http://hyperphysics.phy-astr.gsu.edu/hbase/acloc.html}},
   note = {Accessed: 16-04-2015}
+}
+
+@misc{DENCES,
+  author = "Dennis S.K",
+  howpublished = {\url{http://en.wikipedia.org/wiki/Caesium}},
+  url = {http://commons.wikimedia.org/wiki/User:Dnn87#/media/File:CsCrystals1.JPG},
+  note = {Licenced under CC BY-SA 3.0 \url{http://creativecommons.org/licenses/by-sa/3.0/}}
 }
 
 
