--- a/essay_kladd.tex
+++ b/essay_kladd.tex
@@ -16,11 +16,12 @@
 \usepackage{wrapfig}
 \usepackage{color}
 \usepackage{lettrine}
+\usepackage[font={small,it}]{caption}
 
+\bibliographystyle{plain}
 \usepackage[
     backend=biber,
-    style=alphabetic,
-    sorting=ynt
+    style=alphabetic
 ]{biblatex}
 \addbibresource{refs.bib}
 
@@ -63,25 +64,31 @@ Currently, this is not much more but comments and notes in order for me to write
 \setcounter{page}{1}
 
 \section{Global Positioning System: A short introduction}
-The Global Positioning System (GPS) is a utility owned by the United States that provides its user with positioning, navigation and timing services. At the end of 60's, the U.S Navy was developing the Polaris missile, a missile capable of being launched from a submarine. One of the requirements for launching the Polaris missile was exact knowledge of the submarines position. The problem led the Navy and The Applied Physics Laboratory at Hopkins to develop the Transit system, the earliest predecessor to the GPS system \cite{SteJ}. 
+The Global Positioning System (GPS) is a utility owned by the United States that provides its user with positioning, navigation and timing services. At the end of 60's, the U.S Navy was developing the Polaris missile, a missile capable of being launched from a submarine. One of the requirements for launching the Polaris missile was exact knowledge of the submarines position. The problem led the Navy and The Applied Physics Laboratory at Hopkins to develop the Transit system, the earliest predecessor to the GPS system \cite{SteJ}.
 
-Today, roughly 40 years later we are surrounded by GPS technology. In fields like emergency response, search and rescue, fleet management and even agriculture, it has become a vital tool of utmost importance to everyday operation. Satellite navigation can be found in most new cars and few phones are today sold without an internal GPS receivers. The European Space Agency estimated that there were 2 billion GPS enabled devices by 2012 \cite{ESA}. What started out as a navigation tool for the U.S navy is now used by millions, if not billions of users both civilian and military all over the globe.
-
-\begin{figure}[hb]
+Today, roughly 40 years later we are surrounded by GPS technology.
+\begin{wrapfigure}{r}{0.55\textwidth}
   \centering
-  \includegraphics[scale=0.4]{trilaterate.jpg}
+  \includegraphics[width=0.50\textwidth]{trilaterate.jpg}
   \caption[GPS trilaterate figure]
-   {Figure showing how GPS satellites are used to trilaterate to determine a GPS receivers position \cite{GISTRILATERATE}.}
-\end{figure}
-
-A common misconception (that is often reinforced by Hollywood action movies) is that the GPS satellites track \textit{you} by communicating with your GPS receiver. It actually works the other way around. You are, with your GPS receiver, tracking a set of satellites in order to establish your own position. At any given time, there are at least 24 GPS satellites each in its own orbit at about 11,000 nautical miles above your head \cite{GPSGOVSS}. In order for a GPS receiver to determine its position and obtain correct time, it will need 4 GPS satellites within line of sight \footnote{The line of sight requirement might seem unreasonable, but by the time the signal has reached earth, is has degraded to a minimum of -160 dBW \cite{NATINT}}.
+   {Figure showing how GPS satellites are used to trilaterate to determine a GPS receivers position. Source: \cite{GISTRILATERATE}}
+\end{wrapfigure}
+In fields like emergency response, search and rescue, fleet management and even agriculture, it has become a vital tool of utmost importance to everyday operation. Satellite navigation can be found in most new cars and few phones are today sold without an internal GPS receivers. The European Space Agency estimated that there were 2 billion GPS enabled devices by 2012 \cite{ESA}. What started out as a navigation tool for the U.S navy is now used by millions, if not billions of users both civilian and military all over the globe. A common misconception (that is often reinforced by Hollywood action movies) is that the GPS satellites track \textit{you} by communicating with your GPS receiver. It actually works the other way around. You are, with your GPS receiver, tracking a set of satellites in order to establish your own position. At any given time, there are at least 24 GPS satellites each in its own orbit at about 11,000 nautical miles above your head \cite{GPSGOVSS}. In order for a GPS receiver to determine its position and obtain correct time, it will need 4 GPS satellites within line of sight \footnote{The line of sight requirement might seem unreasonable, but by the time the signal has reached earth, is has degraded to a minimum of -160 dBW \cite{NATINT}}.
 The method used by your GPS receiver to determine its position is called \textit{trilateration}. 
 Trilateration is used in geometry as a process of determining the location (absolute or relative) of point by measuring distance. It is often confused with triangulation which instead of distance, uses angles. Measuring the distance from the GPS satellites to a given position on earth is quite simple when using the equation: 
 \begin{equation} Distance = Rate \times Time \end{equation} 
 The equation is simple to solve, first we need the rate. In this context, the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. The signal contains a time stamp of when the signal was sent. By comparing this time stamp with the current time, one can calculate the age of the signal and therefore how long it has spent traveling. \cite{GPSGOVTE}  
 
 \section{Clocks}
-What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they track time. In essence, all clocks work the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials, the display. In a typical wristwatch, the oscillator is quartz crystal powered by a battery. The frequency of which the crystal oscillations is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. Although a completely different beast, the same principles apply to the atomic clock which uses the uses the microwave signal that electrons in atoms emit\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition\cite{HP}} when they change energy levels \cite{HP}. This is of course an extremely limited explanation, but for this essay, it will have to suffice.
+What does a \$10 wristwatch and a \$100 000 atomic clock have in common? They both drift. This phenomena known as \textit{clock drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart.
+\begin{wrapfigure}{l}{0.55\textwidth}
+  \centering
+  \includegraphics[width=0.50\textwidth]{cscrystals.jpg}
+  \caption[Caesium campule]
+   {High pure Caesium crystals in ampule under argon. Source: \cite{DENCES}}
+\end{wrapfigure} 
+This property is a result of how they track time. In essence, all clocks work the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is quartz crystal powered by a battery. The frequency of which the crystal oscillations is then divided down to a single Hertz by simple electronics.The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. 
+Although a completely different beast, the same principles apply to the atomic clock which uses the uses the microwave signal that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}. This is of course an extremely limited explanation, but for this essay, it will have to suffice.
 
 \subsection{GPS Time}
 During the introduction of this article the properties of GPS as a tool for navigation was made apparent. This is however not the only use of GPS. On board of each GPS satellite there is an atomic clock. These clocks are synchronized with each other and also with clocks on the earth. Even though the use of GPS as a way to obtain correct time was not among the original design goals, it has proven useful for time critical applications. 
